Fix CSS : DropMenu z-index

--- a/src/components/EmailGenerator/CopyPasteElement/CopyPasteElement.css
+++ b/src/components/EmailGenerator/CopyPasteElement/CopyPasteElement.css
@@ -1,8 +1,7 @@
 .copypaste-container {
-    position: relative;
     background-color: var(--background-color);
     margin: 50px 50px 50px 50px;
-    padding: 34px 16px 32px 32px;
+    padding: 30px 16px 30px 30px;
     width: 85%;
     text-align: left;
     font-size: 85%;
@@ -14,16 +13,20 @@
     overflow: hidden;
     border: 2px solid var(--font-color);
     border-radius: 5px;
+    display: flex;
+    flex-direction: column;
 }
-
+/* 
 .copypaste-container:hover {
     overflow-x: scroll;
-}
+} */
 
 .copypaste-button {
-    position: absolute;
     top: 15px;
     right: 7px;
+    width: min-content;
+    height: min-content;
+    align-self: flex-end;
 }
 
 .copypaste-button:hover {
@@ -37,7 +40,7 @@
     color: white;
     position: fixed;
     bottom: 40px;
-    z-index: 10000;
+    z-index: 1;
     border-radius: 3px;
     padding: 6px 12px;
     box-shadow: rgba(15, 15, 15, 0.1) 0px 0px 0px 1px;
